# SteamDoc

./: .env
src/: main.rs
src/utils/: constants.rs
steamdocs_backend/: Cargo.toml
steamdocs_backend/entity/: Cargo.toml
steamdocs_backend/migration/src/: lib.rs
steamdocs_backend/src/routes/: auth_routes.rs  home_routes.rs
steamdocs_backend/src/routes/handlers/: home_handler.rs  mod.rs  user_handler.rs
