#![feature(error_in_core)]

[package]
name = "steamdocs_backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
actix-web = "4"
serde = { version = "1.0.197", features = ["derive"] }
tokio = {version = "1.41.1", features = ["full"]}
sea-orm = { version = "0.12.0", features = [ "sqlx-postgres", "runtime-tokio-rustls" , "macros", "with-json"] }
dotenv = "0.15.0"
sha256 = "1.5.0"
lazy_static = "1.4.0"
